# vulkan-renderer

./: .gitignore  .gitmodules  CMakeLists.txt
VkRenderer/assets/: basic.frag  basic.fs  basic.vert  basic.vs  bloom.frag  common.glsl  compile.bat  compile.sh  cubeMap.frag  cubeMap.vert  depthPrePass.vert  frag.spv  fs.glsl  pbr.frag  postProcess.frag  postProcess.fs  sceneData.glsl  screen.vert  shadowMap.vert  ssao.frag  toneMapping.frag  vert.spv  vs.glsl
VkRenderer/src/: main.cpp  material.cpp  material.hpp  model.cpp  model.hpp  pch.hpp  window.cpp  window.hpp
VkRenderer/src/vulkan/: buffer.cpp  buffer.hpp  commandBuffer.cpp  commandBuffer.hpp  context.cpp  context.hpp  descriptorSet.cpp  descriptorSet.hpp  device.cpp  device.hpp  framebuffer.cpp  framebuffer.hpp  imguiContext.cpp  imguiContext.hpp  pipeline.cpp  pipeline.hpp  renderPass.cpp  renderPass.hpp  shader.cpp  shader.hpp  swapchain.cpp  swapchain.hpp  syncObjects.cpp  syncObjects.hpp  texture.cpp  texture.hpp  vkHeader.hpp  window.cpp  window.hpp
